added placeholder content

--- a/index.html
+++ b/index.html
@@ -3,8 +3,26 @@
   <head>
   </head>
   <body>
-    <h1>Loren Makes Games</h1>
-    <h1>Contact Me</h1>
-    
+    <div class="header">
+        <h1>Loren Makes Games</h1>
+        <a href="/about/index.html">About</a>
+        <a href="/games/index.html">Games</a>
+        <a href="/contact/index.html">Contact</a>
+    </div>
+    <div class="content">
+        <h1>Contact Me</h1>
+        <p>Here, you can find links to some of my other online profiles, such as:</p>
+        <a href="https://www.linkedin.com/in/loren-heubert-aubry/">Linkedin</a>
+        <p>and</p>
+        <a href="https://www.github.com/stampeder525/">Github</a>
+        <p>You can also shoot me a quick email with this form:</p>
+        <form class="email_form">
+          <label>Name</label>
+          <input type="text" name="name" placeholder="Jane Doe">
+          <label>Name</label>
+          <textarea name="message" placeholder="Hey there!"></textarea>
+          <button type="submit">Submit</button>
+        </form>
+    </div>
   </body>
 </html>
