--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <form class="email_form">
           <label>Name</label>
           <input type="text" name="name" placeholder="Jane Doe">
-          <label>Name</label>
+          <label>Message</label>
           <textarea name="message" placeholder="Hey there!"></textarea>
           <button type="submit">Submit</button>
         </form>
