--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>LorenMakesGames</title>
-      <link rel="stylesheet" href="styles.css"/>
+    <title>LorenMakesGames</title>
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
-    <div class="header">
+    <header>
       <h1 noselect>Loren Makes Games</h1>
       <a href="/about/"><h2>About</h2></a>
       <a href="/games/"><h2>Games</h2></a>
       <a href="/contact/"><h2>Contact</h2></a>
-    </div>
+    </header>
     <div class="content">
         <h1>Contact Me</h1>
         <p>Here, you can find links to some of my other online profiles, such as:</p>
