--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <header>
       <h1 noselect>Loren Makes Games</h1>
       <a href="/about/"><h2>About</h2></a>
+      <a href="/games/AsteroidTrampoline"><h2>Asteroid Trampoline</h2></a>
       <a href="/games/"><h2>Games</h2></a>
       <a href="/contact/"><h2>Contact</h2></a>
     </header>
