--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <textarea name="message" placeholder="Hey there!"></textarea>
           <button type="submit">Submit</button>
         </form>
+        <img src="img/smokies.jpg">
     </div>
   </body>
 </html>
