--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>LorenMakesGames</title>
-    <link rel="stylesheet" href="css/styles.css"/>
-  </head>
-  <body>
-    <header>
-      <h1 noselect>Loren Makes Games</h1>
-      <a href="/about/"><h2>About</h2></a>
-      <a href="/games/AsteroidTrampoline"><h2>Asteroid Trampoline</h2></a>
-      <a href="/games/"><h2>Games</h2></a>
-      <a href="/contact/"><h2>Contact</h2></a>
-    </header>
+<head>
+  <title>LorenMakesGames</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7" crossorigin="anonymous"></head>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"> 
+<body>
+  <header>
+    <h1 noselect>Loren Makes Games</h1>
+    <a href="/about/">
+      <h2>About</h2>
+    </a>
+    <a href="/games/AsteroidTrampoline">
+      <h2>Asteroid Trampoline</h2>
+    </a>
+    <a href="/games/">
+      <h2>Games</h2>
+    </a>
+    <a href="/contact/">
+      <h2>Contact</h2>
+    </a>
+  </header>
+  <div class="contactPage">
     <div class="content">
-        <h1>Contact Me</h1>
-        <p>Here, you can find links to some of my other online profiles, such as:</p>
-        <a href="https://www.linkedin.com/in/loren-heubert-aubry/">Linkedin</a>
-        <p>and</p>
-        <a href="https://www.github.com/stampeder525/">Github</a>
-        <p>You can also shoot me a quick email with this form:</p>
-        <form class="email_form">
-          <label>Name</label>
-          <input type="text" name="name" placeholder="Jane Doe">
-          <label>Message</label>
-          <textarea name="message" placeholder="Hey there!"></textarea>
-          <button type="submit">Submit</button>
-        </form>
-        <img src="img/smokies.jpg">
+      <h1>Contact Me</h1>
+      <p>Here, you can find links to some of my other online profiles, such as:</p>
+      <div class="links">
+          <a href="https://www.linkedin.com/in/loren-heubert-aubry/"><i class="fab fa-linkedin fa-5x"></i></a>
+          <p>and</p>
+          <a href="https://www.github.com/stampeder525/"><i class="fab fa-github fa-5x"></i></a>
+      </div>
+      <p>You can also shoot me a quick email with this form:</p>
+      <form class="email_form">
+        <label>Name</label>
+        <input type="text" name="name" placeholder="Jane Doe"/>
+        <label>Email</label>
+        <input type="text" name="email" placeholder="janedoe@website.com"/>
+        <label>Message</label>
+        <textarea name="message" placeholder="Hey there!"></textarea>
+        <button type="submit">Submit</button>
+      </form>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
