--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <title>LorenMakesGames</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1 noselect>Loren Makes Games</h1>
+    <h1>Loren Makes Games</h1>
     <div class="headerLinks">
         <a href="/about/">
           <h2>About</h2>
