--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       </div>
       <p>You can also shoot me a quick email with this form:</p>
       <form class="email_form">
-        <label>Name</label>
+        <label for="name">Name</label>
         <input type="text" name="name" placeholder="Jane Doe"/>
-        <label>Email</label>
+        <label for="email">Email</label>
         <input type="text" name="email" placeholder="janedoe@website.com"/>
-        <label>Message</label>
+        <label for="message">Message</label>
         <textarea name="message" placeholder="Hey there!"></textarea>
         <button type="submit">Submit</button>
       </form>
