--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
       <p>You can also shoot me a quick email with this form:</p>
       <form class="email_form">
         <label for="name">Name</label>
-        <input type="text" name="name" placeholder="Jane Doe"/>
+        <input type="text" name="name" id="name" placeholder="Jane Doe"/>
         <label for="email">Email</label>
-        <input type="text" name="email" placeholder="janedoe@website.com"/>
+        <input type="text" name="email" id="email" placeholder="janedoe@website.com"/>
         <label for="message">Message</label>
-        <textarea name="message" placeholder="Hey there!"></textarea>
+        <textarea name="message" id="message" placeholder="Hey there!"></textarea>
         <button type="submit">Submit</button>
       </form>
     </div>
