--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>LorenMakesGames</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+  <!-- <link rel="stylesheet" href="css/html5reset-1.6.1.css"/> -->
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/fontawesome.css" integrity="sha384-1rquJLNOM3ijoueaaeS5m+McXPJCGdr5HcA03/VHXxcp2kX2sUrQDmFc3jR5i/C7" crossorigin="anonymous">
@@ -21,7 +22,7 @@
         <a href="/games/">
           <h2>Games</h2>
         </a>
-        <a href="/contact/">
+        <a class="active" href="/contact/">
           <h2>Contact</h2>
         </a>
     </div>
@@ -29,7 +30,8 @@
   <div class="contactPage">
     <div class="content">
       <h1>Contact Me</h1>
-      <p>Here, you can find links to some of my other online profiles, such as:</p>
+      <a id="jump" tabindex="0" href="#jumpcontent">Jump to Content</a>
+      <p id="jumpcontent">Here, you can find links to some of my other online profiles, such as:</p>
       <div class="links">
           <a href="https://www.linkedin.com/in/loren-heubert-aubry/" aria-label="linkedin" alt="linkedin"><i class="fab fa-linkedin fa-5x"></i></a>
           <p>and</p>
