--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>LorenMakesGames</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
   <!-- <link rel="stylesheet" href="css/html5reset-1.6.1.css"/> -->
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/brands.css" integrity="sha384-rf1bqOAj3+pw6NqYrtaE1/4Se2NBwkIfeYbsFdtiR6TQz0acWiwJbv1IM/Nt/ite" crossorigin="anonymous">
@@ -27,7 +27,7 @@
         </a>
     </div>
   </header>
-  <div class="contactPage">
+  <div class="contactPage" role="main">
     <div class="content">
       <h1>Contact Me</h1>
       <a id="jump" tabindex="0" href="#jumpcontent">Jump to Content</a>
