--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
       <a id="jump" tabindex="0" href="#jumpcontent">Jump to Content</a>
       <p id="jumpcontent">Here, you can find links to some of my other online profiles, such as:</p>
       <div class="links">
-          <a href="https://www.linkedin.com/in/loren-heubert-aubry/" aria-label="linkedin" alt="linkedin"><i class="fab fa-linkedin fa-5x"></i></a>
+          <a href="https://www.linkedin.com/in/loren-heubert-aubry/" aria-label="linkedin"><i class="fab fa-linkedin fa-5x"></i></a>
           <p>and</p>
-          <a href="https://www.github.com/stampeder525/" aria-label="github" alt="github"><i class="fab fa-github fa-5x"></i></a>
+          <a href="https://www.github.com/stampeder525/" aria-label="github"><i class="fab fa-github fa-5x"></i></a>
       </div>
       <p>You can also shoot me a quick email with this form:</p>
       <form class="email_form">
